syntax="proto3";
package com.yude.game.doudizhu.application.request;
option java_outer_classname = "CallScoreRequest$$ByJProtobuf";
message CallScoreRequest {  
 sint32 callScore=1;
 sint32 posId=2;
 sint32 gameZoneId=3;
 sint64 roomId=4;
 sint64 channelUserId=5;
 MessageType messageType=6;
}
enum MessageType {  
LOGIN=0;
HEARTBEAT=1;
SERVICE=2;
TIMEOUT=3;
PUSH_MESSAGE=4;
}
 