syntax="proto3";
package com.yude.game.doudizhu.application.response;
option java_outer_classname = "CallScoreOptionResponse$$ByJProtobuf";
message CallScoreOptionResponse {  
repeated sint32 callScoreOption=1;
}
