syntax="proto3";
package com.yude.game.doudizhu.application.response;
option java_outer_classname = "LandlordOwnershipResponse$$ByJProtobuf";
message LandlordOwnershipResponse {  
 sint32 landlordPosId=1;
repeated sint32 holeCards=2;
 sint32 landlordScore=3;
 sint32 gameStatus=4;
}
